<resources>
    <string name="app_name">Sample</string>

    <string name="home">首页</string>
    <string name="mine">我的</string>

    <string name="sample_paging">列表分页</string>
    <string name="sample_state_layout">状态布局切换</string>

    <string name="sample_view_pager_default_item">ViewPager 默认下标</string>

    <string name="sample_media_picker">媒体选择器</string>

    <string name="media_picker_image_single">单选图片</string>
    <string name="media_picker_image_multiple">多选图片</string>
    <string name="media_picker_video_single">单选视频</string>
    <string name="media_picker_video_multiple">多选视频</string>
    <string name="media_picker_mixed_single">单选图片和视频</string>
    <string name="media_picker_mixed_multiple">多选图片和视频</string>
    <string name="media_picker_gif_single">单选 GIF</string>
    <string name="media_picker_result_idle">请选择媒体类型。</string>
    <string name="media_picker_result_cancelled">%1$s：已取消</string>
    <string name="media_picker_result_selected">%1$s：已选择 %2$d 项\n%3$s</string>

</resources>
