<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_image_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/media_picker_image_single" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_image_multiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/media_picker_image_multiple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_video_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/media_picker_video_single" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_video_multiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/media_picker_video_multiple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mixed_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/media_picker_mixed_single" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mixed_multiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/media_picker_mixed_multiple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gif_single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/media_picker_gif_single" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
